--- a/day_2/image_overlay/index.html
+++ b/day_2/image_overlay/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Overlay</title>
+    <title>Find the ghost!</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <!-- This overlay fades in on hover -->
     <div class="overlay-wrapper">
     	<img src="images/image_1.jpg" alt="Drinks">
-    	<div class="overlay">Drinks</div>
+      <div class="overlay fadein-overlay">Drinks</div>
+    </div>
+
+    <!-- This overlay slides in from the left on hover -->
+    <div class="overlay-wrapper">
+      <img src="images/image_2.jpg" alt="Fruit">
+    	<div class="overlay slidein-overlay">Fruit</div>
     </div>
   </body>
 </html>
